apps/plex/files/envoy.yaml
node:
  id: service0
  cluster: cluster0
overload_manager:
  refresh_interval: 0.25s
  resource_monitors:
  - name: envoy.resource_monitors.fixed_heap
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig
      max_heap_size_bytes: 1073741824  # 1 GiB
  actions:
  - name: envoy.overload_actions.shrink_heap
    triggers:
    - name: envoy.resource_monitors.fixed_heap
      threshold:
        value: 0.95
  - name: envoy.overload_actions.stop_accepting_requests
    triggers:
    - name: envoy.resource_monitors.fixed_heap
      threshold:
        value: 0.98
static_resources:
  listeners:
  - name: listener_1
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 8443
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          internal_address_config:
            cidr_ranges:
            - address_prefix: 10.233.0.0
              prefix_len: 16
          use_remote_address: true
          normalize_path: true
          merge_slashes: true
          path_with_escaped_slashes_action: UNESCAPE_AND_REDIRECT
          common_http_protocol_options:
            idle_timeout: 3600s  # 1 hour
            headers_with_underscores_action: REJECT_REQUEST
          http2_protocol_options:
            max_concurrent_streams: 100
            initial_stream_window_size: 65536  # 64 KiB
            initial_connection_window_size: 1048576  # 1 MiB
          # stream_idle_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
          # request_timeout: 300s  # 5 mins, must be disabled for long-lived and streaming requests
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: default
              domains: ["*"]
              routes:
              - match: {prefix: /}
                route:
                  cluster: plex_cluster
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: /etc/ssl/certs/plex/tls.crt
              private_key:
                filename: /etc/ssl/certs/plex/tls.key
            alpn_protocols: ["h2,http/1.1"]
            validation_context:
              trusted_ca:
                filename: /etc/ssl/certs/ca-certificates.crt
  clusters:
  - name: plex_cluster
    per_connection_buffer_limit_bytes: 32768  # 32 KiB
    connect_timeout: 0.25s
    type: EDS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    eds_cluster_config:
      service_name: plex_direct
      eds_config:
        path_config_source:  # dynamic upstream
          path: /var/lib/envoy/eds.yaml
          watched_directory:
            path: /var/lib/envoy
    # typed_extension_protocol_options:
    #   envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    #     "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    #     explicit_http_config:
    #       http2_protocol_options:
    #         connection_keepalive:
    #           interval: 30s
    #           timeout: 5s
    # upstream_connection_options:
    #   # configure a TCP keep-alive to detect and reconnect to the admin
    #   # server in the event of a TCP socket half open connection
    #   tcp_keepalive: {}
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context:
            trusted_ca:
              filename: /etc/ssl/certs/ca-certificates.crt
